# gdbus-standalone

./: Makefile.am  autogen.sh  configure.ac  gdbus-lowlevel-standalone.pc.in  gdbus-standalone.pc.in
docs/: Makefile.am
docs/reference/: Makefile.am
docs/reference/gdbus/: Makefile.am  gdbus-docs.xml  gdbus-standalone-sections.txt  gdbus-standalone.types
gdbus/: Makefile.am  example-own-name.c  example-server.c  example-subtree.c  example-watch-name.c  example-watch-proxy.c  gbitlock.c  gbusnameowner.c  gbusnameowner.h  gbusnamewatcher.c  gbusnamewatcher.h  gdbus-lowlevel.h  gdbus.h  gdbus.symbols  gdbusalias.h  gdbusaliasdef.c  gdbusconnection-lowlevel.h  gdbusconnection.c  gdbusconnection.h  gdbusconversion.c  gdbusconversion.h  gdbusctypemapping-lowlevel.h  gdbusctypemapping.c  gdbusenums.h  gdbusenumtypes.c  gdbusenumtypes.c.template  gdbusenumtypes.h  gdbuserror-lowlevel.h  gdbuserror.c  gdbuserror.h  gdbusintrospection.c  gdbusintrospection.h  gdbusmainloop-lowlevel.h  gdbusmainloop.c  gdbusmethodinvocation.c  gdbusmethodinvocation.h  gdbusnameowning.c  gdbusnameowning.h  gdbusnamewatching.c  gdbusnamewatching.h  (+25 more)
gdbus/tests/: Makefile.am  connection.c  error.c  export.c  introspection.c  names.c  peer.c  proxy.c  sessionbus.c  sessionbus.h  tests.c  tests.h  testserver.py  threading.c
